# WhillansCatalogPaper

./: .gitignore  .pre-commit-config.yaml  2008EventStartTime.txt  2008EventStartTime_2stas.txt  2009-2009no_data_2sta.txt  2009EventStartTime.txt  2009EventStartTime_2stas.txt  2010-2010no_data.txt  2010-2011no_data.txt  2010EventStartTime_2stas.txt  2011EventStartTime.txt  2014-2015no_data.txt  2015EventStartTime.txt  2016EventStartTime.txt  2017EventStartTime_2stas.txt  2019-2019no_data_2sta.txt  2019EventStartTime_2stas.txt  AllEventStartTimes.txt  AllEventStartTimes1stas.txt  AllEventStartTimes_2stas.txt  CatViewerMarimo.py  CatalogComparison.ipynb  CatalogSlipDecimalYear.txt  CatalogViewer.ipynb  GPGN573Final.ipynb  LA17Dist.ipynb  LukeSlopes.ipynb  MakeCatalog.ipynb  MattSlipDecimalYear.txt  PickEvents.ipynb  README.md  WhillansCatalog.ipynb  ['2007']EventStartTime.txt  coveragereport.sh  pyproject.toml  to_profile.py  whillanscatalogpaper.yml
2010_2011Events/: 2010-12-30_09-35-00.txt  2010-12-30_19-03-45.txt  2010-12-31_11-00-00.txt  2010-12-31_20-41-15.txt  2011-01-01_12-56-15.txt
AGU2024/: EventTimeseries.ipynb
AGU2024_Figs/: FigureLocations.txt
Catalog/: MakeCatalog.ipynb
EventStartTime/: 2007EventStartTime.txt  2010EventStartTime.txt  2011EventStartTime.txt  2012EventStartTime.txt  2017EventStartTime.txt  2018EventStartTime.txt  2019EventStartTime.txt
EventStartTime2stas/: 2013EventStartTime2stas.txt
EventStartTimeLorentzian2stas/: 2013EventStartTime2stas.txt
EventStartTime_2stas/: 2013EventStartTime_2stas.txt  2014EventStartTime_2stas.txt  2015EventStartTime_2stas.txt  2016EventStartTime_2stas.txt  2018EventStartTime_2stas.txt
Figure1/: Comps1Fig1.sh  Figure1.sh  Figure1AGU2024.sh  Figure1TEST.sh  GZ15.txt  LA08.txt  Stations.txt  StationsBottom.txt  StationsGZBottom.txt  StationsGZTop.txt  StationsTop.txt  _README.txt  moa.cpt
(+259 files in other folders)
